# LLMOllama

./: .gitignore  DataUtils.py  LLMModel.py  README.md  VectorStore.py  loadInfo.py  main.py  mangoDB.py  pyproject.toml  repository.txt  requirements.txt
cee_llm_library.egg-info/: PKG-INFO  SOURCES.txt
documents/: sample_file3.xls
mvenv/: pyvenv.cfg
mvenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
src/: VectorStore.py  main.py
src/cee_llm_library/: __init__.py  chroma_db.py  data_utils.py  main.py  mangoDB.py
src/cee_llm_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_llm.py
